--- a/address_book/templates/base.html
+++ b/address_book/templates/base.html
@@ -8,12 +8,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Bienvenu!</title>
   </head>
   <body>
   	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'home' %}">REMEDE BURKINA</a>
+    <a class="navbar-brand" href="{% url 'home' %}">ANNUAIRE ADKONTACT</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,18 +21,33 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'add_address' %}">Ajouter address</a>
+          <a class="nav-link" href="{% url 'add_address' %}">Créer mon contact</a>
         </li>
         
       </ul>
     </div>
   </div>
 </nav>
-
+	
   	<br/>
   	<div class="container">
-    	{% block content %}
-		{% endblock %}
+  		<br/>
+		{% if messages %}
+			{% for message in messages %}
+				<div class="alert alert-warning alert-dismissable" role="alert">
+					<button class="close" data-dismiss="alert">
+						<small>
+							<sup>x</sup>
+						</small>
+						
+					</button>
+					{{message}}
+				
+				</div>
+			{% endfor %}
+		{% endif %}
+	    	{% block content %}
+			{% endblock %}
 	</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
